tests/fixtures/invalid/primitive_typo_in_map.avsc
{
  "type": "record",
  "name": "TestMapWithTypo",
  "fields": [
    {
      "name": "lookup",
      "type": {
        "type": "map",
        "values": {
          "type": "sting"
        }
      }
    }
  ]
}
